<resources>
    <string name="app_name">BouncyBall</string>
    <string name="ip">"http://115.24.160.111"</string>
    <string name="icon_home">\ue900</string>
    <string name="icon_weibo">\ue915</string>
    <string name="icon_back">\ue5c4</string>
    <string name="icon_user">\ue907</string>
    <string name="icon_edit">\ue22b</string>
    <string name="icon_music">\ue903</string>
    <string name="icon_message">\ue91a</string>
    <string name="icon_developer">\ue9f9</string>
    <string name="icon_book">\ue904</string>
    <string name="icon_follow">\ue909</string>
    <string name="icon_followed">\ue90b</string>
    <string name="icon_loading">\ue90c</string>
    <string name="icon_uncollected">\ue90e</string>
    <string name="icon_more">\ue3ba</string>
    <string name="icon_draw">\ue40a</string>
    <string name="icon_ok">\ue876</string>
    <string name="icon_add">\ue3ba</string>
    <string name="icon_fresh">\ue3ba</string>
    <string name="icon_like">\ue87d</string>
    <string name="icon_unlike">\ue87e</string>
    <string name="icon_new">\ue05e</string>
    <string name="icon_com">\ue02f</string>
    <string name="icon_unlock">\ue898</string>
    <string name="icon_lock">\ue899</string>
    <string name="icon_email">\ue945</string>
    <string name="icon_warning">\ue002</string>
    <string name="icon_uncoll">\ue90e</string>
    <string name="icon_coll">\ue90f</string>
    <string name="icon_sub">\ue908</string>
    <string name="icon_user_cycle">\ue853</string>
    <string name="icon_people">\ue7fb</string>
    <string name="icon_hitball">\ue919</string>
    <string name="icon_receive">\ue0cb</string>
    <string name="icon_send">\ue0d8</string>
    <string name="icon_chat">\ue96f</string>
    <string name="icon_chapter">\ue905</string>
    <string name="icon_next">\ue409</string>
    <string name="version_name">弹力球</string>
    <string name="can_not_find_version_name">ERROR</string>
</resources>
