<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_layout"
    android:background="@color/bottom"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/id_tab_praise1"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_img_praise1"
            android:clickable="false"
            android:background="@color/bottom"
            android:textColor="@color/buttonbefore"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_unlike"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_tab_collect1"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_img_collect1"
            android:clickable="false"
            android:background="@color/bottom"
            android:textColor="@color/buttonbefore"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_uncoll"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_tab_comment1"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_img_comment1"
            android:clickable="false"
            android:background="@color/bottom"
            android:textColor="@color/buttonbefore"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_com"/>
    </LinearLayout>

</LinearLayout>
