<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_layout"
    android:background="@color/bottom"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/id_tab_home"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_img_home"
            android:clickable="false"
            android:background="@color/bottom"
            android:textColor="@color/buttonafter"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_home"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_tab_message"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_img_message"
            android:clickable="false"
            android:background="@color/bottom"
            android:textColor="@color/buttonbefore"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_message"/>
        <ImageView
            android:id="@+id/push"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/redspot"
            android:layout_marginRight="-20dp"
            android:layout_marginTop="-45dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_tab_user"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_img_user"
            android:clickable="false"
            android:background="@color/bottom"
            android:textColor="@color/buttonbefore"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_user"/>
    </LinearLayout>

</LinearLayout>
