<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blank"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/id_tab_account"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:onClick="onClick"
        android:background="@color/zhanghao"
        android:orientation="horizontal">
        <Button
            android:id="@+id/id_img_account"
            android:gravity="center_vertical|end"
            android:layout_width="match_parent"
            android:paddingRight="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:background="@color/zhanghao"
            android:textColor="@color/buttonbefore"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_user_cycle"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/wenzi"
            android:background="@color/zhanghao"
            android:textSize="@dimen/iconsize"
            android:layout_weight="1"
            android:text="我的账号"
            android:textStyle="bold"/>
    </LinearLayout>
    <include layout="@layout/line"/>
    <LinearLayout
        android:id="@+id/id_tab_works"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:onClick="onClick"
        android:background="@color/zuopin"
        android:orientation="horizontal">
        <Button
            android:id="@+id/id_img_works"
            android:layout_width="match_parent"
            android:paddingRight="50dp"
            android:gravity="center_vertical|end"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:background="@color/zuopin"
            android:textColor="@color/buttonbefore"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_chapter"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/zuopin"
            android:textSize="@dimen/iconsize"
            android:layout_weight="1"
            android:text="我的作品"
            android:textStyle="bold"
            android:textColor="@color/wenzi"/>
    </LinearLayout>
    <include layout="@layout/line"/>
    <LinearLayout
        android:id="@+id/id_tab_collect"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:onClick="onClick"
        android:background="@color/shoucang"
        android:orientation="horizontal">
        <Button
            android:id="@+id/id_img_collect"
            android:layout_width="match_parent"
            android:paddingRight="50dp"
            android:gravity="center_vertical|end"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:background="@color/shoucang"
            android:textColor="@color/buttonbefore"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_coll"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/shoucang"
            android:textSize="@dimen/iconsize"
            android:text="我的收藏"
            android:textStyle="bold"
            android:textColor="@color/wenzi"/>
    </LinearLayout>
    <include layout="@layout/line"/>
    <LinearLayout
        android:id="@+id/id_tab_us"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:onClick="onClick"
        android:background="@color/zuopin"
        android:orientation="horizontal">
        <Button
            android:id="@+id/id_img_us"
            android:layout_width="match_parent"
            android:gravity="center_vertical|end"
            android:paddingRight="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:background="@color/zuopin"
            android:textColor="@color/buttonbefore"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_developer"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/iconsize"
            android:background="@color/zuopin"
            android:text="关于我们"
            android:textStyle="bold"
            android:textColor="@color/wenzi"/>
    </LinearLayout>
    <include layout="@layout/line"/>
</LinearLayout>
