<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blank"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/show1"/>
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
  </RelativeLayout>
    <include layout="@layout/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/id_tab_novel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onClick"
            android:background="@color/xiaoshuo"
            android:orientation="horizontal">
            <Button
                android:id="@+id/id_img_novel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/xiaoshuo"
                android:textColor="@color/buttonbefore"
                android:textSize="@dimen/iconsize"
                android:text="@string/icon_book"
                android:clickable="false"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="小说接龙"
                android:textColor="@color/wenzi"
                android:gravity="center"
                android:layout_weight="3"
                android:textStyle="bold"
                android:textSize="@dimen/font" />
        </LinearLayout>
        <include layout="@layout/line2"/>
        <LinearLayout
            android:id="@+id/id_tab_music"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onClick"
            android:orientation="horizontal">
            <Button
                android:id="@+id/id_img_music"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/buttonbefore"
                android:textSize="@dimen/iconsize"
                android:text="@string/icon_music"
                android:clickable="false"
                android:background="@color/yinyue"
                android:layout_weight="3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="共谱一曲"
                android:textColor="@color/wenzi"
                android:background="@color/yinyue"
                android:gravity="center"
                android:layout_weight="3"
                android:textStyle="bold"
                android:textSize="@dimen/font"/>
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/id_tab_cartoon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onClick"
            android:orientation="horizontal">
            <Button
                android:id="@+id/id_img_cartoon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/buttonbefore"
                android:textSize="@dimen/iconsize"
                android:text="@string/icon_draw"
                android:clickable="false"
                android:background="@color/manhua"
                android:layout_weight="3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="多人漫画"
                android:background="@color/manhua"
                android:gravity="center"
                android:layout_weight="3"
                android:textStyle="bold"
                android:textSize="@dimen/font"
                android:textColor="@color/wenzi"/>
        </LinearLayout>
        <include layout="@layout/line2"/>
        <LinearLayout
            android:id="@+id/id_tab_more"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onClick"
            android:orientation="horizontal">
            <Button
                android:id="@+id/id_img_more"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/buttonbefore"
                android:textSize="@dimen/iconsize"
                android:text="@string/icon_more"
                android:clickable="false"
                android:background="@color/gengduo"
                android:layout_weight="3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gengduo"
                android:text="更多内容"
                android:gravity="center"
                android:layout_weight="3"
                android:textStyle="bold"
                android:textSize="@dimen/font"
                android:textColor="@color/wenzi"/>
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/line"/>
</LinearLayout>
