<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blank"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/id_tab_pmessage"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:onClick="onClick"
        android:background="@color/sixin"
        android:orientation="horizontal">
        <Button
            android:id="@+id/id_img_pmessage"
            android:layout_width="match_parent"
            android:paddingRight="50dp"
            android:gravity="center_vertical|end"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:background="@color/sixin"
            android:textColor="@color/buttonbefore"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_chat"/>
        <ImageView
            android:id="@+id/message_push"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/redspot"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="30dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:textColor="@color/wenzi"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/iconsize"
            android:text="我的私信"
            android:textStyle="bold"
            android:background="@color/sixin"/>
    </LinearLayout>
    <include layout="@layout/line"/>
    <LinearLayout
        android:id="@+id/id_tab_comment"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:onClick="onClick"
        android:background="@color/pinglun"
        android:orientation="horizontal">
        <Button
            android:id="@+id/id_img_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:paddingRight="50dp"
            android:layout_weight="1"
            android:clickable="false"
            android:background="@color/pinglun"
            android:textColor="@color/buttonbefore"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_com"/>
        <ImageView
            android:id="@+id/comment_push"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/redspot"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="30dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="收到评论"
            android:textStyle="bold"
            android:textSize="@dimen/iconsize"
            android:background="@color/pinglun"
            android:textColor="@color/wenzi"/>
    </LinearLayout>
    <include layout="@layout/line"/>
    <LinearLayout
        android:id="@+id/id_tab_priase"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:onClick="onClick"
        android:background="@color/zan"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/id_img_praise"
            android:layout_width="match_parent"
            android:paddingRight="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:layout_weight="1"
            android:clickable="false"
            android:background="@color/zan"
            android:textColor="@color/buttonbefore"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_like"/>
        <ImageView
            android:id="@+id/like_push"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/redspot"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="30dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/iconsize"
            android:text="收到的赞"
            android:textStyle="bold"
            android:background="@color/zan"
            android:textColor="@color/wenzi"/>
    </LinearLayout>
    <include layout="@layout/line"/>
    <LinearLayout
        android:id="@+id/id_tab_subscribe"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:onClick="onClick"
        android:background="@color/dingyue"
        android:orientation="horizontal">
        <Button
            android:id="@+id/id_img_subscribe"
            android:layout_width="match_parent"
            android:paddingRight="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:layout_weight="1"
            android:background="@color/dingyue"
            android:clickable="false"
            android:textColor="@color/buttonbefore"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_sub"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="30dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/iconsize"
            android:text="我的关注"
            android:textStyle="bold"
            android:background="@color/dingyue"
            android:textColor="@color/wenzi"/>
    </LinearLayout>
    <include layout="@layout/line"/>
</LinearLayout>
