<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blank"
    android:orientation="vertical">
    <LinearLayout
        android:background="@color/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_layout"
        android:paddingTop="@dimen/activity_padding"
        android:paddingBottom="@dimen/activity_padding"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:background="@color/top"
            android:layout_height="match_parent">
        <Button
            android:id="@+id/id_left_text"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/top"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_back"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/top">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="章节内容"
            android:background="@color/top"
            android:textSize="@dimen/iconsize"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/id_nametab_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/zuozhe">
        <Button
            android:id="@+id/id_user_text"
            android:layout_width="wrap_content"
            android:background="@color/zuozhe"
            android:layout_height="match_parent"
            android:onClick="onClick"
            android:textColor="@color/buttonbefore"
            android:textSize="@dimen/second_font"
            android:text="@string/icon_user_cycle"/>
        <TextView
            android:id="@+id/id_name_text"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="@dimen/second_font"
            android:textStyle="bold"
            android:textColor="@color/nicheng"
            android:text="昵称"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="right|center">
            <Button
                android:id="@+id/icon_like"
                android:background="@color/zuozhe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/like"
                android:textSize="@dimen/second_font"
                android:text="@string/icon_like"/>
            <TextView
                android:id="@+id/id_praise_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginRight="@dimen/activity_margin"
                android:text="0"
                android:textSize="@dimen/second_font"
                android:textStyle="bold"
                android:textColor="@color/nicheng" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/id_text_text"
            android:layout_width="match_parent"
            android:maxLines = "999"
            android:scrollbars = "vertical"
            android:paddingRight="@dimen/activity_margin"
            android:paddingLeft="@dimen/activity_margin"
            android:layout_height="match_parent"
            android:text="小说内容"
            android:background="@color/neirongbeijing"
            android:textColor="@color/xiaoshuowenzi"
            android:textSize="@dimen/font"
            android:textStyle="bold"
            android:gravity="top"/>
    </LinearLayout>
    <include layout="@layout/buttom2"/>
</LinearLayout>
