<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blank"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_layout"
        android:background="@color/top"
        android:paddingTop="@dimen/activity_padding"
        android:paddingBottom="@dimen/activity_padding"
        android:orientation="horizontal">
        <Button
            android:id="@+id/id_lef_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/top"
            android:onClick="onClick"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_back"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="登录"
            android:textSize="@dimen/iconsize"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:background="@color/top"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/hitball"
            android:src="@drawable/hitball"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_ll"
        android:layout_width="match_parent"
        android:background="@drawable/shape"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_margin"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:id="@+id/id_Bu_user"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/buttonbefore"
            android:textSize="@dimen/iconsize"
            android:background="@color/liebiaobeijing"
            android:text="@string/icon_user_cycle"
            android:clickable="false"/>
        <EditText
            android:id="@+id/id_Edtext5"
            android:textColor="@color/wenzi"
            android:layout_margin="@dimen/activity_margin"
            android:textColorHint="@color/tishiwenzi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font"
            android:hint="请输入手机号"
            android:gravity="center"
            android:inputType="none"/>

    </LinearLayout>
        <include layout="@layout/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/id_Bu_pass"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="false"
            android:background="@color/liebiaobeijing"
            android:textColor="@color/buttonbefore"
            android:textSize="@dimen/iconsize"
            android:text="@string/icon_lock"/>
        <EditText
            android:id="@+id/id_Edtext6"
            android:textColor="@color/wenzi"
            android:textColorHint="@color/tishiwenzi"
            android:layout_margin="@dimen/activity_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入密码"
            android:textSize="@dimen/font"
            android:gravity="center"
            android:inputType="textPassword"/>
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/id_Button_login"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="@dimen/button_layout"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:text="登录"
            android:textSize="@dimen/button_font"
            android:background="@drawable/shape2"
            android:textColor="@color/anniuwenzi"/>
        <Button
            android:id="@+id/id_Button_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_layout"
            android:layout_weight="1"
            android:background="@drawable/shape2"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:textColor="@color/anniuwenzi"
            android:text="注册"
            android:textSize="@dimen/button_font"/>
    </LinearLayout>
</LinearLayout>
        </ScrollView>

    </LinearLayout>
